[tool.poetry]
name = "sdcd"
version = "0.1.0"
description = "Stable differentiable causal discovery for interventional data."
authors = ["Achille Nazaret <aon2108@columbia.edu>", "Justin Hong <jjh2230@columbia.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "sdcd"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
torch = "^2.1.0"
wandb = "^0.15.12"
pandas = "^1.1.1"
tqdm = "^4.66.1"
networkx = "^3.2.1"
numba = "^0.58.1"
scipy = "^1.11.3"
anndata = {version = "^0.10.3", optional = true}
pytest = {version = "^7.4.3", optional = true}
gies = {version = "^0.0.1", optional = true}
scikit-learn = {version = "^1.3.2", optional = true}
pytorch-lightning = {version = "1.5.10", optional = true}
tensorflow = {version = "^2.9.1", platform = "linux", optional = true}
tensorflow-macos = {version = "^2.9.2", platform = "darwin", optional = true}
click = {version = "^8.1.7", optional = true}
seaborn = {version = "^0.13.0", optional = true}
matplotlib = {version = "^3.8.1", optional = true}

[tool.poetry.extras]
tests = ["pytest", "gies", "scikit-learn", "pytorch-lightning", "tensorflow", "tensorflow-macos", "anndata"]
benchmark = ["gies", "scikit-learn", "pytorch-lightning", "tensorflow", "tensorflow-macos", "click", "seaborn", "matplotlib"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
